--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.6",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/drawer": "^6.6.2",
@@ -18,13 +19,17 @@
     "dotenv": "^16.0.3",
     "expo": "~48.0.15",
     "expo-application": "~5.1.1",
+    "expo-barcode-scanner": "~12.3.2",
     "expo-constants": "~14.2.1",
+    "expo-crypto": "~12.2.1",
     "expo-dev-client": "~2.2.1",
     "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
+    "expo-linking": "~4.0.1",
     "expo-localization": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
     "expo-updates": "~0.16.4",
     "formik": "^2.3.2",
     "moment": "^2.29.4",
@@ -37,11 +42,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-webview": "11.26.0",
-    "yup": "^1.2.0",
-    "expo-barcode-scanner": "~12.3.2",
-    "expo-crypto": "~12.2.1",
-    "expo-system-ui": "~2.2.1",
-    "expo-linking": "~4.0.1"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
