--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.6",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/checkbox": "^0.5.15",
     "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/elements": "^1.3.17",
